k8s/myadmin/dep_volume.yml
#namespace
apiVersion: v1
kind: Namespace
metadata:
  name: myadmin
