k8s/myadmin/dep_wordpress.yml

#deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-dep
  namespace: myadmin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      name: wordpress-pod
      namespace: myadmin
      labels: 
        app: wordpress
    spec:
      containers:
      - name: wordpress-cont
        image: wordpress:latest
        ports:
        - containerPort: 80
---
#service
apiVersion: v1
kind: Service
metadata:
  name: wordpress-serv
  namespace: myadmin
spec:
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
