k8s/myadmin/ingress-apache.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-apache
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend: 
          service:
            name: apache-service
            port: 
              number: 80
